--- a/healthone-symfony/templates/base.html.twig
+++ b/healthone-symfony/templates/base.html.twig
@@ -3,10 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+            <!-- Bootstrap core CSS -->
+            <link href="css/bootstrap.min.css" rel="stylesheet">
+            <!-- Material Design Bootstrap -->
+            <link href="css/mdb.min.css" rel="stylesheet">
+            <!-- Your custom styles (optional) -->
+            <link href="css/style.css" rel="stylesheet">{% endblock %}
     </head>
     <body>
+        {{ include ('inc/image.html.twig') }}
+        {{ include ('inc/navbar.html.twig') }}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {{ include ('inc/footer.html.twig') }}
+        {% block javascripts %}
+            <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+            <!-- Bootstrap tooltips -->
+            <script type="text/javascript" src="js/popper.min.js"></script>
+            <!-- Bootstrap core JavaScript -->
+            <script type="text/javascript" src="js/bootstrap.min.js"></script>
+            <!-- MDB core JavaScript -->
+            <script type="text/javascript" src="js/mdb.min.js"></script>{% endblock %}
     </body>
 </html>
